Add screenshot functionality and update Docker configuration
- Added a new volume for screenshots in docker-compose.yml to persist screenshot data.
- Updated Dockerfile to create a directory for storing screenshots.
- Integrated Puppeteer for capturing screenshots in the job runner, enhancing the audit process.
- Updated ResultPage to utilize ScreenshotGallery for displaying screenshots.
- Registered new screenshot routes in the server for serving captured images.

This commit enhances the application's ability to capture and display screenshots during audits, improving overall functionality and user experience.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
       - ./client/src:/app/client/src
       - ./config:/app/config
       - ./public:/app/public
+      - ./screenshots:/app/screenshots
     ports:
       - "3000:3000"
       - "5173:5173"
@@ -108,6 +109,7 @@ services:
     volumes:
       - ./src:/app/src
       - ./config:/app/config
+      - ./screenshots:/app/screenshots
     depends_on:
       postgres:
         condition: service_healthy
