--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
     "playwright": "^1.45.3",
+    "puppeteer": "^24.16.1",
     "sharp": "^0.33.4",
     "tesseract.js": "^5.1.0",
     "uuid": "^10.0.0",
