--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ FIRECRAWL_API_BASE=https://api.firecrawl.dev/v1
 # LLM Provider (openai|anthropic)
 LLM_PROVIDER=openai
 LLM_API_KEY=your_api_key_here
-LLM_MODEL=gpt-4o
+LLM_MODEL=gpt-5
 
 # S3 Storage
 S3_ENDPOINT=https://s3.amazonaws.com
