--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.0",
-    "react-query": "^3.39.3",
-    "framer-motion": "^11.0.0",
-    "recharts": "^2.10.0",
-    "lucide-react": "^0.300.0",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^3.0.0",
-    "clsx": "^2.1.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^7.8.1",
+    "recharts": "^2.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
